--- a/dockers/config.env
+++ b/dockers/config.env
@@ -1,5 +1,5 @@
 BOT_NAME=bi.zone
-
+TELEGRAM_BOT_TOKEN=6247267264:AAG3WejVpcH_2sRjvucFXzg0z0kh93RLKao
 LOG_LEVEL=INFO
 LOG_FILE=./logs/importer.log
 
