--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.11
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-COPY .. /app
-WORKDIR /app
+WORKDIR /project/app
+COPY . .
 RUN apt-get update -y && \
     apt-get upgrade -y && \
-    pip install --no-cache-dir -r requirements.txt
+    pip install -r requirements.txt
