--- a/config.tests.env
+++ b/config.tests.env
@@ -5,3 +5,7 @@ LOG_FILE=./logs/importer.log
 
 CVE_API=https://services.nvd.nist.gov/rest/json/cves/
 CVE_API_VERSION=2.0
+
+MAX_CVE_OUTPUT=5
+
+TRANSLATE_DESCRIPTIONS=FALSE
