--- a/requirements.txt
+++ b/requirements.txt
@@ -6,14 +6,35 @@ async-timeout==4.0.2
 attrs==23.1.0
 Babel==2.9.1
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.1.0
+contourpy==1.0.7
+cryptography==40.0.2
+cycler==0.11.0
+Deprecated==1.2.13
+fonttools==4.39.4
 frozenlist==1.3.3
 idna==3.4
+kiwisolver==1.4.4
 magic-filter==1.0.9
+matplotlib==3.7.1
 multidict==6.0.4
+numpy==1.24.3
+packaging==23.1
+pandas==2.0.1
+Pillow==9.5.0
+pycparser==2.21
 pydantic==1.10.7
+PyGithub==1.58.2
+PyJWT==2.7.0
+PyNaCl==1.5.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
 pytz==2023.3
+seaborn==0.12.2
+six==1.16.0
 typing_extensions==4.5.0
+tzdata==2023.3
+urllib3==2.0.2
+wrapt==1.15.0
 yarl==1.9.2
-python-dateutil~=2.8.2
-seaborb==3.7.1
