fixed output params

--- a/config.debug.env
+++ b/config.debug.env
@@ -8,6 +8,8 @@ CVE_API_VERSION=2.0
 
 MAX_CVE_OUTPUT=5
 
-TRANSLATE_DESCRIPTIONS=FALSE
+ADD_TRANSLATE=FALSE
 ADD_EPSS=FALSE
 # FIXME поменять на false
+ADD_POC=TRUE
+SHOW_REPOS=5
