--- a/config.env
+++ b/config.env
@@ -8,5 +8,7 @@ CVE_API_VERSION=2.0
 
 MAX_CVE_OUTPUT=5
 
-TRANSLATE_DESCRIPTIONS=TRUE
+ADD_TRANSLATE=TRUE
 ADD_EPSS=TRUE
+ADD_POC=TRUE
+SHOW_REPOS=5
