--- a/config.tests.env
+++ b/config.tests.env
@@ -8,5 +8,7 @@ CVE_API_VERSION=2.0
 
 MAX_CVE_OUTPUT=5
 
-TRANSLATE_DESCRIPTIONS=FALSE
+ADD_TRANSLATE=FALSE
 ADD_EPSS=FALSE
+ADD_POC=FALSE
+SHOW_REPOS=5
