--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,12 @@ services:
     container_name: bizone-cve-debug-container
     env_file:
       - ./config.debug.env
+      - ./secrets.env
     volumes:
       - $PWD/logs:/app/logs
     restart: always
 #    healthcheck:
-#      test: [ "CMD-SHELL", "curl -s -f -X POST http://localhost:7790/api/v1.0/status | grep True || exit 1" ]
+#      test: [ "CMD-SHELL", "echo True" ]
 #      start_period: 30s
 #      interval: 30s
 #      timeout: 10s
@@ -24,15 +25,16 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: bizone-cve-debug
-    container_name: bizone-cve-debug-container
+    image: bizone-cve-prod
+    container_name: bizone-cve-prod-container
     env_file:
       - ./config.debug.env
+      - ./secrets.env
     volumes:
       - $PWD/logs:/app/logs
     restart: always
 #    healthcheck:
-#      test: [ "CMD-SHELL", "curl -s -f -X POST http://localhost:7790/api/v1.0/status | grep True || exit 1" ]
+#      test: [ "CMD-SHELL", "echo True" ]
 #      start_period: 30s
 #      interval: 30s
 #      timeout: 10s
@@ -42,15 +44,15 @@ services:
 #    build:
 #      context: .
 #      dockerfile: Dockerfile
-#    image: bizone-cve-debug
-#    container_name: bizone-cve-debug-container
+#    image: bizone-cve-test
+#    container_name: bizone-cve-test-container
 #    env_file:
 #      - ./config.debug.env
 #    volumes:
 #      - $PWD/logs:/app/logs
 #    restart: always
 ##    healthcheck:
-##      test: [ "CMD-SHELL", "curl -s -f -X POST http://localhost:7790/api/v1.0/status | grep True || exit 1" ]
+##      test: [ "CMD-SHELL", "echo True" ]
 ##      start_period: 30s
 ##      interval: 30s
 ##      timeout: 10s
