--- a/config.debug.env
+++ b/config.debug.env
@@ -8,8 +8,7 @@ CVE_API_VERSION=2.0
 
 MAX_CVE_OUTPUT=5
 
-ADD_TRANSLATE=FALSE
-ADD_EPSS=FALSE
-# FIXME поменять на false
+ADD_TRANSLATE=TRUE
+ADD_EPSS=TRUE
 ADD_POC=TRUE
 SHOW_REPOS=5
