added searchsploit; changed info smiles

--- a/config.tests.env
+++ b/config.tests.env
@@ -7,8 +7,9 @@ CVE_API=https://services.nvd.nist.gov/rest/json/cves/
 CVE_API_VERSION=2.0
 
 MAX_CVE_OUTPUT=5
+SHOW_REPOS=5
+SHOW_SEARCHSPLOIT=20
 
 ADD_TRANSLATE=FALSE
 ADD_EPSS=FALSE
 ADD_POC=FALSE
-SHOW_REPOS=5
